[package]
 name = "heatshrink-bin"
 authors.workspace = true
 categories.workspace = true
 description.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 version.workspace = true

[[bin]]
 name = "heatshrink"
 path = "src/main.rs"

[dependencies]
heatshrink-lib = { version = "0.4.1", path = "../heatshrink-lib" }
clap.workspace = true

[dev-dependencies]
