[package]
 name = "heatshrink-lib"
 authors.workspace = true
 categories.workspace = true
 description.workspace = true
 edition.workspace = true
 license.workspace = true
 publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 version.workspace = true
 
[lib]
 name = "heatshrink"
 path = "src/lib.rs"

[dependencies]

[dev-dependencies]
 hex-literal.workspace = true

[features]
 default = ["heatshrink-use-index"]
 # Define features
 heatshrink-use-index = []
